first row completed

--- a/hello/static/css/index.css
+++ b/hello/static/css/index.css
@@ -1,8 +1,71 @@
-.jumbotron {
+.junoon-header-container {
+    width: 1366px;
+    height: 225px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.junoon-logo {
+    width: 349px;
+    height: 130px;
+}
+
+.contact-box-container {
+    width: 280px;
+    height: 70px;
+    background-color: #ffffff;
+    border: solid 4px #ed8603;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-box-button {
     width: 193px;
-    height: 22px;
-    font-family: Montserrat;
+    height: 31px;
+    font-family: MONOSPACE;
     font-size: 30px;
+    text-align: center;
+    color: #ea8004;
+}
+
+.register-container {
+    height: 130px;
+    width: 289px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding-top: 20px;
+}
+
+.register-box {
+    width: 280px;
+    height: 70px;
+    background-color: #ffffff;
+    border: solid 4px #ea8004;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.register-text {
+    width: 147px;
+    height: 32px;
+    font-family: MONOSPACE;
+    font-size: 30px;
+    text-align: center;
+    color: #ea8004;
+}
+
+.free-food-sample {
+    width: 280px;
+    height: 27px;
+    font-family: MONOSPACE;
+    font-size: 18px;
+    font-weight: 300;
     text-align: center;
     color: #ea8004;
 }
