--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,4 +1,23 @@
 {% load staticfiles %}
 
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
-<div class="jumbotron">Rakesh Ranjan Sukla </div>
+<div class="junoon-header-container">
+    <div class="register-container">
+        <div class="register-box">
+            <div class="register-text">
+                REGISTER
+            </div>
+        </div>
+        <div class="free-food-sample">
+            for free food sample
+        </div>
+    </div>
+    <div class="junoon-logo">
+        <img src="{% static 'images/logo.png' %}">
+    </div>
+    <div class="contact-box-container">
+        <div class="contact-box-button">
+            CONTACT US
+        </div>
+    </div>
+</div>
