width should be auto

--- a/hello/static/css/index.css
+++ b/hello/static/css/index.css
@@ -1,5 +1,5 @@
 .junoon-header-container {
-    width: 1366px;
+    width: auto;
     height: 225px;
     background-color: #ffffff;
     display: flex;
