--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -20,4 +20,96 @@
             CONTACT US
         </div>
     </div>
+ </div>
+
+<div class="meaning-sukoon-container">
+    <div class="first-pic">
+        <img class="first-pic" src="{% static 'images/pic1.jpeg' %}">
+    </div>
+    <div class="meaning-sukoon-text-container">
+        <div class="meaning-sukoon-title">
+            MEANING OF SUKOON
+        </div>
+        <div class="meaning-sukoon-subtitle">
+            meaning of sukoon Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus facilisis mi, vel aliquet lectus ullamcorper id. Donec id felis nec nulla mollis commodo. Aenean vitae consectetur quam. Mauris non dapibus nunc. Mauris consequat imperdiet interdum.
+        </div>
+        <div class="meaning-sukoon-logo">
+            <img src="{% static 'images/item_1.png' %}">
+        </div>
+    </div>
+    <div class="second-pic">
+        <img class="second-pic" src="{% static 'images/pic2.jpeg' %}">
+    </div>
+</div>
+
+<div class="sukoon-flow-container">
+    <div class="sukoon-flow-title">
+        LOREM IPSUM
+    </div>
+    <div class="sukoon-flow-pic">
+        <img src="{% static 'images/infographc.png' %}">
+    </div>
+</div>
+
+<div class="sukoon-vision-flow-container">
+    <div class="sukoon-vision-container">
+        <div class="our-vision-title">
+            OUR VISION
+        </div>
+        <div class="our-vision-subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus facilisis mi, vel aliquet lectus ullamcorper id. Donec id felis nec nulla mollis commodo. Aenean vitae consectetur quam. Mauris non dapibus nunc. Mauris consequat imperdiet interdum.
+        </div>
+        <div class="our-vision-logo">
+            <img src="{% static 'images/item_1.png' %}">
+        </div>
+    </div>
+    <div class="sukoon-vision-pic">
+        <img class="sukoon-vision-pic" src="{% static 'images/pic3.jpeg' %}">
+    </div>
+</div>
+
+<div class="taste-guarantee-commitment-container">
+    <div class="taste-guarantee-first-pic">
+        <img src="{% static 'images/item_2-1.png' %}">
+    </div>
+    <div class="taste-guarantee-text-container">
+        <div class="percent-guarantee-title">
+            100% TASTE GUARANTEE
+        </div>
+        <div class="percent-guarantee-subtitle">
+            If you don’t like our food we’ll give your money back.
+        </div>
+    </div>
+    <div class="taste-guarantee-second-pic">
+        <img src="{% static 'images/item_2-2.png' %}">
+    </div>
+</div>
+
+<div style="background-image: url('{% static 'images/pic4.jpeg' %}')" class="sukoon-actual-food-container">
+</div>
+
+<div class="explore-indian-cuisine-container">
+    <div class="explore-first-pic">
+        <img src="{% static 'images/item_3-2.png' %}">
+    </div>
+    <div class="explore-indian-text-container">
+        <div class="explore-indian-cuisine-title">
+            EXPLORE INDIAN CUISINE WITH US
+        </div>
+        <div class="explore-indian-cuisine-subtitle">
+            explore indian cuisine with us Lorem ipsum dolor sit amet, consectetur adipiscing elit. a
+        </div>
+    </div>
+    <div class="explore-second-pic">
+        <img src="{% static 'images/item_3-1.png' %}">
+    </div>
+</div>
+
+<div class="indian-food-photos-container">
+    <img class="indian-food-pic-first" src="{% static 'images/pic5.jpeg' %}">
+    <img class="indian-food-pic-second" src="{% static 'images/pic6.jpeg' %}">
+</div>
+
+<div class="sukoon-footer-container">
+    <img class="sukoon-footer-pic" src="{% static 'images/item_1.png' %}">
 </div>
