--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -15,9 +15,11 @@
     <div class="junoon-logo">
         <img src="{% static 'images/logo.png' %}">
     </div>
-    <div class="contact-box-container">
-        <div class="contact-box-button">
-            CONTACT US
+    <div class="contact-box-top-container">
+        <div class="contact-box-container">
+            <div class="contact-box-button">
+                CONTACT US
+            </div>
         </div>
     </div>
  </div>
