--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -89,7 +89,10 @@
     </div>
 </div>
 
-<div style="background-image: url('{% static 'images/pic4.jpeg' %}')" class="sukoon-actual-food-container">
+<div class="sukoon-actual-top-food-container">
+    <div style="background-image: url('{% static 'images/pic4.jpeg' %}')" class="sukoon-actual-food-container">
+
+    </div>
 </div>
 
 <div class="explore-indian-cuisine-container">
