--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -117,6 +117,8 @@
     <img class="indian-food-pic-second" src="{% static 'images/pic6.jpeg' %}">
 </div>
 
-<div class="sukoon-footer-container">
-    <img class="sukoon-footer-pic" src="{% static 'images/item_1.png' %}">
+<div class="sukoon-footer-top-container">
+    <div class="sukoon-footer-container">
+        <img class="sukoon-footer-pic" src="{% static 'images/item_1.png' %}">
+    </div>
 </div>
