--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,13 +1,14 @@
 {% load staticfiles %}
 
-
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
 <div class="junoon-header-container">
     <div class="register-container">
         <div class="register-box">
-            <div class="register-text">
-                REGISTER
-            </div>
+            <form class="form-register-text" action="https://www.google.com" method="get">
+                <button class="register-text">
+                    REGISTER
+                </button>
+            </form>
         </div>
         <div class="free-food-sample">
             for free food sample
@@ -18,9 +19,11 @@
     </div>
     <div class="contact-box-top-container">
         <div class="contact-box-container">
-            <div class="contact-box-button">
-                CONTACT US
-            </div>
+            <form class="form-contact-us" action="https://www.google.com" method="get">
+                <button class="contact-box-button">
+                    CONTACT US
+                </button>
+            </form>
         </div>
     </div>
  </div>
