adding typeform button

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -4,11 +4,7 @@
 <div class="junoon-header-container">
     <div class="register-container">
         <div class="register-box">
-            <form class="form-register-text" action="https://www.google.com" method="get">
-                <button class="register-text">
-                    REGISTER
-                </button>
-            </form>
+            <a class="typeform-share button" href="https://rakesh125.typeform.com/to/b6GKqY" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:white;color:#ea8004;cursor:pointer;font-family:MONOSPACE;font-size:34px;line-height:52.5px;text-align:center;margin:0;height:52.5px;padding:0px 35px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">REGISTER </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </div>
         <div class="free-food-sample">
             for free food sample
