--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -4,7 +4,7 @@
 <div class="junoon-header-container">
     <div class="register-container">
         <div class="register-box">
-            <a class="typeform-share button" href="https://rakesh125.typeform.com/to/b6GKqY" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:white;color:#ea8004;cursor:pointer;font-family:MONOSPACE;font-size:34px;line-height:52.5px;text-align:center;margin:0;height:52.5px;padding:0px 35px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">REGISTER </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+            <a class="typeform-share button" href="https://rakesh125.typeform.com/to/b6GKqY" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:white;color:#ea8004;cursor:pointer;font-family:'Montserrat', sans-serif;font-weight:bold;font-size:30px;line-height:52.5px;text-align:center;margin:0;height:52.5px;padding:0px 35px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">REGISTER </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </div>
         <div class="free-food-sample">
             for free food sample
@@ -15,11 +15,7 @@
     </div>
     <div class="contact-box-top-container">
         <div class="contact-box-container">
-            <form class="form-contact-us" action="https://www.google.com" method="get">
-                <button class="contact-box-button">
-                    CONTACT US
-                </button>
-            </form>
+             <a class="typeform-share button" href="https://rakesh125.typeform.com/to/O6c2zr" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:white;color:#ea8004;cursor:pointer;font-family:'Montserrat', sans-serif;font-size:30px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">CONTACT US </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </div>
     </div>
  </div>
