--- a/hello/static/css/index.css
+++ b/hello/static/css/index.css
@@ -30,6 +30,7 @@
     justify-content: center;
     align-items: center;
     padding-left: 150px;
+    padding-top: 10px
 }
 
 .contact-box-button {
