sukoon website going live ssoon

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -15,36 +15,43 @@
     </div>
     <div class="contact-box-top-container">
         <div class="contact-box-container">
-             <a class="typeform-share button" href="https://rakesh125.typeform.com/to/O6c2zr" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:white;color:#ea8004;cursor:pointer;font-family:'Montserrat', sans-serif;font-size:30px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">CONTACT US </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+             <a class="typeform-share button" href="https://rakesh125.typeform.com/to/O6c2zr" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:white;color:#B31917;cursor:pointer;font-family:'Montserrat', sans-serif;font-size:30px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">CONTACT US </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </div>
     </div>
  </div>
+
 <div class="meaning-sukoon-container">
     <div class="first-pic">
-        <img class="first-pic" src="{% static 'images/pic1.jpeg' %}">
+        <img class="first-pic" src="{% static 'images/01.png' %}">
+    </div>
+    <div class="white-line">
     </div>
     <div class="meaning-sukoon-text-container">
-        <div class="meaning-sukoon-title">
-            MEANING OF SUKOON
-        </div>
         <div class="meaning-sukoon-subtitle">
-            meaning of sukoon Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus facilisis mi, vel aliquet lectus ullamcorper id. Donec id felis nec nulla mollis commodo. Aenean vitae consectetur quam. Mauris non dapibus nunc. Mauris consequat imperdiet interdum.
+            Sukoon literally translates to relaxation. We at Sukoon help you experience this inner peace and tranquillity by providing you delicious, nourishing food – food that appeals to your taste buds and your body welcomes and absorbs.
         </div>
         <div class="meaning-sukoon-logo">
             <img src="{% static 'images/item_1.png' %}">
         </div>
+        <div class="read-our-story-container">
+            <div class="read-our-story-text">
+                READ OUR STORY
+            </div>
+        </div>
+    </div>
+    <div class="white-line">
     </div>
     <div class="second-pic">
-        <img class="second-pic" src="{% static 'images/pic2.jpeg' %}">
+        <img class="second-pic" src="{% static 'images/02.png' %}">
     </div>
 </div>
 
 <div class="sukoon-flow-container">
     <div class="sukoon-flow-title">
-        LOREM IPSUM
+        HOW IT WORKS
     </div>
     <div class="sukoon-flow-pic">
-        <img src="{% static 'images/infographc.png' %}">
+        <img src="{% static 'images/infographc_2.png' %}">
     </div>
 </div>
 
@@ -54,38 +61,39 @@
             OUR VISION
         </div>
         <div class="our-vision-subtitle">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus facilisis mi, vel aliquet lectus ullamcorper id. Donec id felis nec nulla mollis commodo. Aenean vitae consectetur quam. Mauris non dapibus nunc. Mauris consequat imperdiet interdum.
+            Help people find wholesome, nutritious, delicious authentic Indian cuisine that provides balanced diet, when customers will not have to compromise on taste or quality or nutrition.
         </div>
         <div class="our-vision-logo">
             <img src="{% static 'images/item_1.png' %}">
         </div>
     </div>
     <div class="sukoon-vision-pic">
-        <img class="sukoon-vision-pic" src="{% static 'images/pic3.jpeg' %}">
+        <img class="sukoon-vision-pic" src="{% static 'images/03.png' %}">
     </div>
 </div>
+
 
 <div class="taste-guarantee-commitment-container">
     <div class="taste-guarantee-fixed-container">
         <div class="taste-guarantee-first-pic">
-            <img src="{% static 'images/item_2-1.png' %}">
+            <img src="{% static 'images/item_2-2.png' %}">
         </div>
         <div class="taste-guarantee-text-container">
             <div class="percent-guarantee-title">
-                100% TASTE GUARANTEE
+                OUR IRON-CLAD MONEY-BACK GUARANTEE
             </div>
             <div class="percent-guarantee-subtitle">
-                If you don’t like our food we’ll give your money back.
+                We intend to do this by providing 100% taste guarantee – you don’t like our food, you have your money back.
             </div>
         </div>
         <div class="taste-guarantee-second-pic">
-            <img src="{% static 'images/item_2-2.png' %}">
+            <img src="{% static 'images/item_2-1.png' %}">
         </div>
     </div>
 </div>
 
 <div class="sukoon-actual-top-food-container">
-    <div style="background-image: url('{% static 'images/pic4.jpeg' %}')" class="sukoon-actual-food-container">
+    <div style="background-image: url('{% static 'images/04.png' %}')" class="sukoon-actual-food-container">
 
     </div>
 </div>
@@ -99,7 +107,7 @@
             EXPLORE INDIAN CUISINE WITH US
         </div>
         <div class="explore-indian-cuisine-subtitle">
-            explore indian cuisine with us Lorem ipsum dolor sit amet, consectetur adipiscing elit. a
+            We at Sukoon invite you to explore pure authentic Indian cuisine with us, prepared by some of the best Indian chefs using farm-fresh ingredients and high quality spices.
         </div>
     </div>
     <div class="explore-second-pic">
@@ -108,12 +116,14 @@
 </div>
 
 <div class="indian-food-photos-container">
-    <img class="indian-food-pic-first" src="{% static 'images/pic5.jpeg' %}">
-    <img class="indian-food-pic-second" src="{% static 'images/pic6.jpeg' %}">
+    <img class="indian-food-pic-first" src="{% static 'images/05.png' %}">
+    <div class="white-line-footer">
+    </div>
+    <img class="indian-food-pic-second" src="{% static 'images/06.png' %}">
 </div>
 
 <div class="sukoon-footer-top-container">
     <div class="sukoon-footer-container">
-        <img class="sukoon-footer-pic" src="{% static 'images/item_1.png' %}">
+        <img class="sukoon-footer-pic" src="{% static 'images/item_4.png' %}">
     </div>
 </div>
