--- a/hello/static/css/index.css
+++ b/hello/static/css/index.css
@@ -15,11 +15,17 @@
     height: 130px;
 }
 
+.white-line {
+    width: 4px;
+    height: 455px;
+    background-color: #ffffff;
+}
+
 .contact-box-container {
     width: 280px;
     height: 70px;
     background-color: #ffffff;
-    border: solid 4px #ed8603;
+    border: solid 4px #B31917;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -128,7 +134,7 @@
     height: 455px;
     background-color: #eb8927;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
 }
@@ -136,7 +142,7 @@
 .meaning-sukoon-title {
     font-size: 30px;
     height: 40px;
-    font-family: MONOSPACE;
+    font-family: Montserrat;
     text-align: center;
     color: #ffffff;
 }
@@ -144,8 +150,33 @@
 .meaning-sukoon-subtitle {
     width: 338px;
     height: 220px;
-    font-family: MONOSPACE;
+    font-family: Montserrat;
     font-size: 18px;
+    text-align: center;
+    color: #ffffff;
+    padding-top: 80px;
+}
+
+.meaning-sukoon-logo {
+    padding-bottom: 35px;
+}
+
+.read-our-story-container {
+    width: 250px;
+    height: 45px;
+    border: solid 4px #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
+}
+
+.read-our-story-text {
+    width: 164px;
+    height: 20px;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 700;
     text-align: center;
     color: #ffffff;
 }
@@ -158,7 +189,7 @@
 
 .sukoon-flow-container {
     width: auto;
-    height: 370px;
+    height: 850px;
     background-color: #ffffff;
     display: flex;
     justify-content: center;
@@ -167,19 +198,19 @@
 }
 
 .sukoon-flow-title {
-    width: 354px;
-    height: 57px;
-    font-family: MONOSPACE;
-    font-size: 50px;
+    width: 458px;
+    height: 73px;
+    font-family: Montserrat;
+    font-size: 45px;
     text-align: center;
     color: #c23916;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    font-weight: 600;
+    padding-bottom: 50px;
 }
 
 .sukoon-flow-pic {
-    width: 1111px;
-    height: 167px;
+    width: 841px;
+    height: 578px;
 }
 
 .sukoon-vision-flow-container {
@@ -203,7 +234,7 @@
 .our-vision-title {
     width: 250px;
     height: 52px;
-    font-family: MONOSPACE;
+    font-family: Montserrat;
     font-size: 30px;
     text-align: center;
     color: #ffffff;
@@ -212,7 +243,7 @@
 .our-vision-subtitle {
     width: 558px;
     height: 152px;
-    font-family: MONOSPACE;
+    font-family: Montserrat;
     font-size: 18px;
     text-align: center;
     color: #ffffff;
@@ -238,7 +269,7 @@
 
 .taste-guarantee-fixed-container {
     width: 1362px;
-    height: 225px;
+    height: 350px;
     background-color: #c23916;
     display: flex;
     justify-content: center;
@@ -249,11 +280,12 @@
     width: 163px;
     height: 115px;
     padding-right: 40px;
+    padding-bottom: 110px;
 }
 
 .taste-guarantee-text-container {
     width: 784px;
-    height: 79px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -262,26 +294,30 @@
 
 .percent-guarantee-title {
     width: 684px;
-    height: 79px;
-    font-family: MONOSPACE;
+    height: 100px;
+    font-family: Montserrat;
     font-size: 40px;
     text-align: center;
     color: #ffffff;
+    font-weight: 600;
+    padding-bottom: 13px;
 }
 
 .percent-guarantee-subtitle {
     width: 784px;
     height: 79px;
-    font-family: MONOSPACE;
+    font-family: Montserrat;
     font-size: 23px;
     text-align: center;
     color: #ffffff;
+    font-weight: 600;
 }
 
 .taste-guarantee-second-pic {
     width: 163px;
     height: 115px;
     padding-left: 40px;
+    padding-bottom: 110px;
 }
 
 .sukoon-actual-food-container {
@@ -316,19 +352,28 @@
 .explore-indian-cuisine-title {
     width: 888px;
     height: 39px;
-    font-family: MONOSPACE;
+    font-family: Montserrat;
     font-size: 40px;
     text-align: center;
     color: #c23916;
+    font-weight: 600;
 }
 
 .explore-indian-cuisine-subtitle {
     width: 888px;
     height: 79px;
-    font-family: MONOSPACE;
-    font-size: 30px;
+    font-family: Montserrat;
+    font-size: 23px;
     text-align: center;
     color: #c23916;
+    font-weight: 600;
+    padding-top: 25px;
+}
+
+.white-line-footer {
+    width: 4px;
+    height: 455px;
+    background-color: #ffffff;
 }
 
 .explore-first-pic {
@@ -370,8 +415,8 @@
 }
 
 .sukoon-footer-pic {
-    width: 136px;
-    height: 23px;
+    width: 542px;
+    height: 121px;
 }
 
 .sukoon-footer-top-container {
