adding a pop up box using javascript

--- a/hello/static/css/index.css
+++ b/hello/static/css/index.css
@@ -172,13 +172,13 @@
 }
 
 .read-our-story-text {
-    width: 164px;
-    height: 20px;
+    background-color: #ea8004;
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
     color: #ffffff;
+    border-width: 0;
 }
 
 .second-pic {
@@ -426,4 +426,54 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #ea8004;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    width: 520px; /* Could be more or less, depending on screen size */
+    height: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.our-story-text {
+    font-family: Montserrat;
+    font-size: 20px;
+    text-align: center;
+    color: white;
+    margin-top: 0
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    align-self: flex-end;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
