adding a white line makes it beautiful

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -80,6 +80,8 @@
             <img src="{% static 'images/item_1.png' %}">
         </div>
     </div>
+    <div class="white-line-footer">
+    </div>
     <div class="sukoon-vision-pic">
         <img class="sukoon-vision-pic" src="{% static 'images/03.png' %}">
     </div>
