--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="meaning-sukoon-text-container">
         <div class="meaning-sukoon-subtitle">
-            Sukoon literally translates to relaxation. We at Sukoon help you experience this inner peace and tranquillity by providing you delicious, nourishing food – food that appeals to your taste buds and your body welcomes and absorbs.
+            Sukoon literally translates to relaxation. We at Sukoon help you experience this inner peace and tranquility by providing you delicious, nourishing food – food that appeals to your taste buds and your body welcomes and absorbs.
         </div>
         <div class="meaning-sukoon-logo">
             <img src="{% static 'images/item_1.png' %}">
