--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -74,7 +74,7 @@
             OUR VISION
         </div>
         <div class="our-vision-subtitle">
-            Help people find wholesome, nutritious, delicious authentic Indian cuisine that provides balanced diet, when customers will not have to compromise on taste or quality or nutrition.
+            Help people find wholesome, nutritious, delicious authentic Indian cuisine that provides balanced diet, where customers will not have to compromise on taste or quality or nutrition.
         </div>
         <div class="our-vision-logo">
             <img src="{% static 'images/item_1.png' %}">
